fixed horizontal scroll issue

--- a/public/css/mobile/banner.css
+++ b/public/css/mobile/banner.css
@@ -41,6 +41,11 @@
     background-color: white;
 }
 
+body {
+    overflow-x: hidden !important;
+    width: 100%
+}
+
 .dualImgContainer img, .dualImgContainer ul{
     max-width:90%;
     max-height: 40vh;
