--- a/public/css/mobile/nav.css
+++ b/public/css/mobile/nav.css
@@ -61,6 +61,11 @@ nav{
     background-color:rgba(33, 61, 31, 0.96);
 }
 
+body {
+    overflow-x: hidden !important;
+    width: 100%
+}
+
 .navLinks li{
     list-style: none;
 }
