--- a/public/css/test.css
+++ b/public/css/test.css
@@ -26,3 +26,10 @@ $black-bean: rgba(60, 0, 0, 1); */
     height: 70%;
     background-color: white;
 }
+
+body {
+    overflow-x: hidden !important;
+    width: 100%;
+    position: relative
+}
+
